[project]
name = "mlops-airflow-pipeline"
version = "2.0.0"
description = "Production-grade local MLOps pipeline with Apache Airflow for mobile app usage forecasting"
requires-python = ">=3.12,<3.13"
dependencies = [
    "apache-airflow>=2.10,<3.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "joblib>=1.4",
    "pyarrow>=14",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.22",
    "kaleido>=0.2",
    "holidays>=0.57",
    "mlflow>=2.15",
    "lazypredict>=0.3",
    "flaml[automl]>=2.2",
    "pycaret>=3.3,<4.0; python_version<'3.12'",
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "catboost>=1.2",
    "scipy>=1.12",
    "statsmodels>=0.14",
    "pytest>=8.3",
    "ipykernel>=6.29",
    "jupyter-client>=8.6",
    "nbclient>=0.10",
    "nbconvert>=7.16",
]

[tool.uv]
required-version = ">=0.4.0"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
testpaths = ["tests"]
